the default font size is applied as 14px to whole website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-size: 14px;
+}
+
 /* custon fonts */
 .lato {
   font-family: "Lato", sans-serif;
@@ -13,6 +17,7 @@
 .poppins {
   font-family: "Poppins", sans-serif;
 }
+
 
 /* scrollbar */
 /* Scrollbar */
